--- a/.github/workflows/html5.yml
+++ b/.github/workflows/html5.yml
@@ -44,6 +44,7 @@ jobs:
           haxelib run lime rebuild extension-webm linux
           haxelib git linc_luajit https://github.com/MasterEric/linc_luajit.git
           haxelib git hxvm-luajit https://github.com/nebulazorua/hxvm-luajit.git
+          haxelib git flixel-addons https://github.com/HaxeFlixel/flixel-addons
           haxelib install actuate 
           haxelib list
           haxelib run lime build html5
