--- a/.github/workflows/Main.yml
+++ b/.github/workflows/Main.yml
@@ -193,7 +193,7 @@ jobs:
           haxelib git flixel-addons https://github.com/HaxeFlixel/flixel-addons
           haxelib git faxe https://github.com/uhrobots/faxe
           haxelib git extension-webm https://github.com/KadeDev/extension-webm
-          haxelib run lime rebuild extension-webm windows
+          haxelib run lime rebuild extension-webm html5
           haxelib git linc_luajit https://github.com/nebulazorua/linc_luajit.git
           haxelib git hxvm-luajit https://github.com/nebulazorua/hxvm-luajit
           haxelib install actuate 
